--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+  <head>
+  <meta charset="UTF-8">
+  <title>CRJakob's website</title>
+</head>
+
   <body>
     <h1>Hello World</h1>
   </body>
