--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
   <title>CRJakob's website</title>
   <link rel="stylesheet" href="styleset.css" />
 </head>
-<body>
+<header>
   <div>
     <h1>Your Name</h1>
     <p>your description or tagline here</p>
     <!-- Optional links -->
     <!-- <p><a href="https://github.com/yourusername">GitHub</a></p> -->
   </div>
+</header>
+<body>
+  
 
   <!-- Optional: Eruda for debug mode -->
   <script>
