--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRJakob's Website</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>CRJakob</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <link rel="stylesheet" href="styleset.css">
-</head>
-<header>
-    <h1>Welcome to CRJakob's Website</h1>
+  </head>
+  <body>
+    <div class="hero">
+      <header>
+        <h1>Welcome to CRJakob's Website</h1>
+      </header>
+
+      <div class="badges">
+        <img src="https://api.statusbadges.me/badge/status/800851541007007754?style=for-the-badge" alt="Status">
+        <img src="https://api.statusbadges.me/badge/playing/800851541007007754?style=for-the-badge" alt="Now Playing">
+        <img src="https://api.statusbadges.me/badge/vscode/800851541007007754?style=for-the-badge" alt="Coding">
+        <a href="https://api.statusbadges.me/openspotify/800851541007007754" target="_blank" rel="noopener">
+          <img src="https://api.statusbadges.me/badge/spotify/800851541007007754?style=for-the-badge" alt="Listening To">
+        </a>
+      </div>
+
+      <div class="socials">
+        <a href="https://discord.com/user/800851541007007754" target="_blank" rel="noopener">Discord</a>
+        <a href="https://github.com/CRJakob/" target="_blank" rel="noopener">GitHub</a>
+        <a href="https://x.com/CRJakob" target="_blank" rel="noopener">Twitter</a>
+      </div>
+    </div>
+
+    <main class="content">
+      <p>Hi! Welcome to my Website. This is still kind of a WIP, but here is some cool stuff I am working on!</p>
+
+      <section class="projects">
+        <h2>Projects</h2>
+        <div class="project-grid">
+          <a href="polymods" class="project-card-link">
+            <div class="project-card">
+              <img src="images/polytrack.png" alt="Polytrack Mods">
+              <h3>Polytrack Mods</h3>
+              <p>My mods for the Game PolyTrack</p>
+            </div>
+          </a>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <p>© 2025 CRJakob. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
