--- a/polymods/index.html
+++ b/polymods/index.html
@@ -19,21 +19,21 @@
         <div class="project-grid">
           <a href="https://github.com/CRJakob/PolyPacks" class="project-card-link">
             <div class="project-card">
-              <img src="https://pml.orangy.cfd/CRJakob/PolyPacks/main/PolyPacks/0.1.0/icon.png" alt="PolyPacks">
+              <img loading="lazy" src="https://pml.orangy.cfd/CRJakob/PolyPacks/main/PolyPacks/0.1.0/icon.png" alt="PolyPacks">
               <h3>PolyPacks</h3>
               <p>A w.i.p mod that lets you use Resource Packs to override PolyTrack's assets</p>
             </div>
           </a>
           <a href="https://github.com/CRJakob/jakobspolymods/tree/main/coolcars" class="project-card-link">
             <div class="project-card">
-              <img src="https://pml.orangy.cfd/CRJakob/jakobspolymods/main/coolcars/1.0.3/icon.png" alt="Cool Cars">
+              <img loading="lazy" src="https://pml.orangy.cfd/CRJakob/jakobspolymods/main/coolcars/1.0.3/icon.png" alt="Cool Cars">
               <h3>Cool Cars</h3>
               <p>An addon to Orangy's Car Switcher mod that adds a few Cool Cars</p>
             </div>
           </a>
           <a href="https://github.com/CRJakob/jakobspolymods/tree/main/goofycars" class="project-card-link">
             <div class="project-card">
-              <img src="https://pml.orangy.cfd/CRJakob/jakobspolymods/main/goofycars/1.0.7/icon.png" alt="Goofy Cars">
+              <img loading="lazy" src="https://pml.orangy.cfd/CRJakob/jakobspolymods/main/goofycars/1.0.7/icon.png" alt="Goofy Cars">
               <h3>Goofy Cars</h3>
               <p>An addon to Orangy's Car Switcher mod that adds a few Goofy Cars</p>
             </div>
