Enable lazy images in main page

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       </header>
 
       <div class="badges">
-        <img src="https://api.statusbadges.me/badge/status/800851541007007754?style=for-the-badge" alt="Status">
-        <img src="https://api.statusbadges.me/badge/playing/800851541007007754?style=for-the-badge" alt="Now Playing">
-        <img src="https://api.statusbadges.me/badge/vscode/800851541007007754?style=for-the-badge" alt="Coding">
+        <img loading="lazy"src="https://api.statusbadges.me/badge/status/800851541007007754?style=for-the-badge" alt="Status">
+        <img loading="lazy"src="https://api.statusbadges.me/badge/playing/800851541007007754?style=for-the-badge" alt="Now Playing">
+        <img loading="lazy"src="https://api.statusbadges.me/badge/vscode/800851541007007754?style=for-the-badge" alt="Coding">
         <a href="https://api.statusbadges.me/openspotify/800851541007007754" target="_blank" rel="noopener">
-          <img src="https://api.statusbadges.me/badge/spotify/800851541007007754?style=for-the-badge" alt="Listening To">
+          <img loading="lazy"src="https://api.statusbadges.me/badge/spotify/800851541007007754?style=for-the-badge" alt="Listening To">
         </a>
       </div>
 
